# pyFloodExtremes

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/: package plan.md
.github/SKILLS/plotting/: pyfloodextremes-plotting-SKILL.md
.github/dev/: flood_frequency_curves.parquet  pypi-roadmap.md  session-digest.md  session_summary_20260403.md  unitTests.md
.github/workflows/: test.yml
PLAN/: handoffPlan.md
data/: AMS.csv  AMS.md
docs/theory/: Advanced Methodologies in Flood Frequency Analysis_ A Technical Briefing.md  Principles and Mechanics of FLIKE Flood Frequency Analysis.md  Statistical Frameworks for Flood Frequency Parameter Estimation.md  Statistical Inference Methods for Flood Frequency Analysis.md  extreme-value-theory.md  flike-lh-moments.md  inference-methods.md  parameter-estimation-frameworks.md
notebooks/: 01_gev_demo.html  01_gev_demo.ipynb  02_lp3_demo.html  02_lp3_demo.ipynb  03_tcev_demo.html  03_tcev_demo.ipynb  04_comparison.ipynb  05_mgbt_demo.html  05_mgbt_demo.ipynb  06_flike_emulator.ipynb
src/flood_ffa/: __init__.py  compare.py  flike.py  plots_lh.py
src/flood_ffa/data/: __init__.py  bom.py
src/flood_ffa/gev/: fit.py  fit_lh.py  plots.py
src/flood_ffa/lp3/: fit.py  fit_lh.py  plots.py
src/flood_ffa/preprocessing/: __init__.py  mgbt.py
src/flood_ffa/stats/: bootstrap.py  lh_moments.py
src/flood_ffa/tcev/: fit.py  plots.py
tests/: test_benchmarks.py  test_fitting.py  test_lh_moments.py  test_mgbt.py
