[project]
name = "pyfloodextremes"
version = "0.1.0"
description = "Bayesian flood frequency analysis (GEV and LP3) built on pyextremes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Lindsay Millard" }
]
keywords = ["hydrology", "flood", "extreme value", "GEV", "LP3", "Bayesian"]
dependencies = [
    "pyextremes",
    "pymc",
    "arviz",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "probscale",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flood_ffa"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]