[project]
name = "pyfloodextremes"
version = "0.1.0.dev1"
description = "EDUCATIONAL DEMO ONLY: Not for production use. Bayesian flood frequency analysis (GEV and LP3) built on pyextremes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
	{ name = "Lindsay Millard", email = "lindsay.millard79@gmail.com" }
]
keywords = ["hydrology", "flood", "extreme value", "GEV", "LP3", "Bayesian"]
dependencies = [
    "pymc",
    "arviz",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "probscale",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Intended Audience :: Science/Research",
  "Development Status :: 1 - Planning",
]

[project.urls]
Homepage = "https://github.com/lmillard79/pyFloodExtremes"
Repository = "https://github.com/lmillard79/pyFloodExtremes"
Documentation = "https://github.com/lmillard79/pyFloodExtremes/tree/main/docs/theory"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flood_ffa"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "jupyter",
    "pyextremes",
    "pyarrow>=12.0.0",
]
